--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
   "dependencies": {
     "@baldeweg/ui": "0.5.0",
     "axios": "0.27.2",
+    "github-slugger": "^1.4.0",
     "js-cookie": "3.0.1",
+    "js-yaml": "^4.1.0",
+    "lodash": "^4.17.21",
     "vue": "3.2.39",
     "vue-i18n": "9.2.2",
     "vue-router": "4.1.5"
